app/assets/stylesheets/content.scss
/* ... */
.user-profile #groups {
  clear:both;
  margin-left:240px;
}
#user-tabs {
  clear:both;
  ul.tabs {
    @include list-reset-soft;
    margin-top:30px;
    width:209px;
    float:left;
    background:$pane1;
    border-top:1px solid $paneborder;
    border-left:1px solid $paneborder;
    border-bottom:1px solid $paneborder;
    @include border-radius(10px 0 0 10px);
    li {
      a {
        position:relative;
        width:159px;
        height:20px;
        padding:10px 40px 10px 10px;
        color:$black;
        font-size:13px;
        border-bottom:1px solid $paneborder;
        &.current {
          background:$white;
          border-right:1px solid $white;
          z-index:2;
          &:hover {
            background:$white;
            cursor:default;
          }
        }
        &:hover {
          text-decoration:none;
          background:$pane2;
        }
        span.count {
          display:block;
          line-height:1;
          font: {
            size:11px;
            weight:bold;
          }
          text-align:center;
          letter-spacing:1px;
          float:right;
          color:$white;
          padding:2px 4px;
          margin-right:-30px;
          background:$grey3;
          border:2px solid $white;
          @include border-radius(10px);
          @include box-shadow(rgba(0, 0, 0, 0.3) 0 0 6px);
        }
      }
      &:first-child a {
        @include border-radius(10px 0 0 0);
      }
      &:last-child a {
        border-bottom:none;
        @include border-radius(0 0 0 10px);
      }
    }
  }
  .panes {
    position:relative;
    z-index:1;
    float:left;
    width:688px;
    padding:30px;
    border:1px solid $paneborder;
    @include border-radius(10px);
    .pane {

    }
  }
}

.dashboard-threads, .thread-list {
  h4 {
    a {
      color: $black;
      &.new {
        color: $lightblue;
      }
    }
  }
}

/* Dashbaord */

#dashboard-tabs {
  .panes {
    .pane {
      a.read-more-simple {
        float:right;
      }
    }
  }
  table.dashboard-threads {
    width:100%;
    tr {
      border-bottom:1px solid $paneborder;
      td {
        padding:10px 0;
        &.meta {
          font: {
            style:italic;
            size:13px;
          }
          color:$lightgrey2;
        }
        &.car-parking {
          padding-left:42px;
          background: image-url("map-icons/m-car-parking.png") 0 10px no-repeat;
        }
        &.cycle-parking {
          padding-left:42px;
          background: image-url("map-icons/m-cycle-parking.png") 0 10px no-repeat;
        }
        &.cycle-path {
          padding-left:42px;
          background: image-url("map-icons/m-cycle-path.png") 0 10px no-repeat;
        }
        &.misc {
          padding-left:42px;
          background: image-url("map-icons/m-misc.png") 0 10px no-repeat;
        }
        &.obstruction {
          padding-left:42px;
          background: image-url("map-icons/m-obstruction.png") 0 10px no-repeat;
        }
        &.planning {
          padding-left:42px;
          background: image-url("map-icons/m-planning.png") 0 10px no-repeat;
        }
        &.roadworks {
          padding-left:42px;
          background: image-url("map-icons/m-roadworks.png") 0 10px no-repeat;
        }
        p {
          margin:0;
          color:$lightgrey2;
          font-size:13px;
        }
        ul.content-icon-list {
          li {
            margin-bottom:10px;
            font-size:13px;
            &:last-child {
              margin-bottom:0;
            }
          }
        }
      }
    }
  }
  section.issues {
    p.warning > img {
      float: left;
    }
  }
}

#dashboard-threads-issues {
  clear:both;
  float:left;
  overflow:hidden;
  margin-top:30px;
  h2 {
    padding-bottom:10px;
    border-bottom:3px solid $paneborder;
  }
  #group-threads {
    width:570px;
    margin-right:30px;
    float:left;
    ul.group-threads-list {
      @include list-reset-soft;
      border-bottom:3px solid $paneborder;
      li {
        clear:both;
        overflow:hidden;
        padding:10px 0;
        border-bottom:1px solid $paneborder;
        &:last-child {
          border-bottom:none;
        }
        a.group-link {
          float:left;
          display:block;
          width:200px;
          font-size:12px;
          color:$lightgrey2;
        }
        div {
          margin-left: 230px;
          p {
            margin:0;
            color:$lightgrey2;
            font-size:13px;
          }
        }
        button {
          float:right;
        }
      }
    }
    a.read-more-simple {
      float:right;
      margin-top:10px;
    }
  }
  #issues-map {
    width:360px;
    float:left;
    .map {
      width:360px;
      height:360px;
    }
  }
}

/* Issue/Group List */
#issue-list-header,
#group-list-header {
  oveflow:hidden;
  h1 {
    float:left;
  }
  .btn-big-green {
    float:right;
  }
}
.pull-left {
  float: left !important;
}
.pull-right {
  float: right !important;
}
#issue-list-tabs,
#group-list-tabs {
  clear:both;
  .tabs a.list,
  .tabs a.list:hover,
  .tabs a.list.current {
    padding-left:40px;
    padding-right:20px;
    background-image:image-url("sprite.png");
    background-position:5px -1078px;
    background-repeat: no-repeat;
  }
  .tabs a.map-pin,
  .tabs a.map-pin:hover,
  .tabs a.map-pin.current {
    padding-left:40px;
    padding-right:20px;
    background-image:image-url("sprite.png");
    background-position:5px -292px;
    background-repeat: no-repeat;
  }
  .filters {
    .search-box,
    button {
      margin-right:30px;
    }
  }
  .pagination {
    margin:15px 0;
    text-align:center;
    ul {
      @include inline-block;
    }
  }
}

/* User Locations */
#user-locations-header {
  oveflow:hidden;
  .btn-big-green {
    float:right;
  }
}

#user-locations {
  p.warning > img {
    float: left;
  }
}

/* Home Page */
body.home {
  #page {
    background:$white image-url("bg-strip.png") 0 0 repeat-x;
  }
}
/* ... */

